--- a/css/styles.css
+++ b/css/styles.css
@@ -28,5 +28,11 @@ a {
     background-color: #1775b885;
 }
 
-
+.search-container-transparent {
+    width: 1200px;
+    opacity: 0.7;
+}
+.search-container-transparent:hover {
+    opacity: 1;
+}
 
