--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ a {
 .page-container {
     width: 85%;
 }
-
+/*global elements styles*/
 
 
 
@@ -17,12 +17,15 @@ a {
 .job-item:hover {
     background-color: #f0f0f0;
 }
+/*generic class for job item*/
+
 /*class for job item logo*/
 .job-item .logo {
     width: 60px;
     height: 60px;
     margin-top: 10px;
 }
+/*class for job item logo*/
 
 /*class for promoted job items*/
 .job-item-promotion {
@@ -31,6 +34,7 @@ a {
 .job-item-promotion:hover {
     background-color: #1775b885;
 }
+/*class for promoted job items*/
 
 /*personal_data page styles*/
 .search-container-transparent {
@@ -40,4 +44,9 @@ a {
 .search-container-transparent:hover {
     opacity: 1;
 }
+/*personal_data page styles*/
 
+/*Footer--socialNetworksContainer*/
+.social-networks-container {
+    background-color:  #0099cb;
+}
