--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,10 @@ a {
 
 /*class for promoted job items*/
 .job-item-promotion {
-    background-color: #1775b845;
+    background-color: #0099cb5e;
 }
 .job-item-promotion:hover {
-    background-color: #1775b885;
+    background-color: #0099cb91;
 }
 /*class for promoted job items*/
 
@@ -49,4 +49,17 @@ a {
 /*Footer--socialNetworksContainer*/
 .social-networks-container {
     background-color:  #0099cb;
+}
+
+
+
+.error {
+    width: 92%;
+    margin: 0px auto;
+    padding: 10px;
+    border: 1px solid #a94442; !important;
+    color: #a94442;
+    background: #f2dede;
+    border-radius: 5px;
+    text-align: left;
 }
